syntax = "proto3";

option java_package = "br.com.samuellfa";
option java_multiple_files = true;

package br.com.samuellfa;

service ProductService {
  rpc Create(ProductRequest) returns (ProductResponse);
  rpc FindById(RequestByIdRequest) returns (ProductResponse);
  rpc Delete(RequestByIdRequest) returns (ProductResponse);
  rpc FindAll(EmptyRequest) returns (ProductResponseList);
}

message ProductRequest {
  string name = 1;
  double price = 2;
  int32 quantity_in_stock = 3;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity_in_stock = 4;
}

message RequestByIdRequest {
  int64 id = 1;
}

message EmptyRequest {}

message ProductResponseList {
  repeated ProductResponse products = 1;
}